crates/apollo-compiler/test_data/diagnostics/0003_anonymous_and_named_operation.txt
Error: anonymous operation cannot be selected when the document contains other operations
   ╭─[0003_anonymous_and_named_operation.graphql:1:1]
   │
 1 │ ╭─▶ query {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── provide a name for this definition
   │     
   │     Help: GraphQL requires operations to be named if the document has more than one
───╯
Error: the required argument `Mutation.addPet(name:)` is not provided
    ╭─[0003_anonymous_and_named_operation.graphql:6:3]
    │
  6 │ ╭─▶   addPet {
    ┆ ┆   
  8 │ ├─▶   }
    │ │         
    │ ╰───────── missing value for argument `name`
    │ 
 16 │       addPet (name: String!, petType: PetType): Result!
    │               ──────┬──────  
    │                     ╰──────── argument defined here
────╯

